--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-  <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
   <link href="http://gmpg.org/xfn/11" rel="profile">
 
   <!-- Enable responsiveness on mobile devices-->
