--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,19 @@ layout: default
   {{ content }}
 </article>
 
+<div class="pagination">
+    {% if page.previous %}
+    <a class="pagination-item older" href="{{ page.previous.url | prepend: site.baseurl }}">Older</a>
+    {% else %}
+    <span class="pagination-item older">Older</span>
+    {% endif %}
+    {% if page.next %}
+    <a class="pagination-item newer" href="{{ page.next.url | prepend: site.baseurl }}">Newer</a>
+    {% else %}
+    <span class="pagination-item newer">Newer</span>
+    {% endif %}
+</div>
+
 {% if site.related_posts != empty %}
 <aside class="related">
   <h2>Related Posts</h2>
