--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
       <header class="masthead">
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>&nbsp;
-          <small><a href="{{ site.baseurl }}/about" title="About">About</a></small>
+          <small><a href="{{ site.baseurl }}/about" title="About">About</a></small>&nbsp;
+          <small><a href="{{ site.baseurl }}/blog" title="Blog">Blog</a></small>
         </h3>
       </header>
 
